root_conf/zonea/kind-wescale-zonea/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kind-wescale-zonea-app1-block-all
  namespace: zonea-argocd
spec:
  policyTypes:
  - Egress
  podSelector: {}
  egress: []
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kind-wescale-zonea-app1-block-zoneb
  namespace: zonea-argocd
spec:
  policyTypes:
  - Egress
  podSelector: {}
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 172.22.0.4/32 # aka kind-wescale-zoneb-app2
